@@ -6,5 +6,6 @@ utils::globalVariables(c(
   "ret", "lasterror", "withrstudioapi", "secure", "verbose", "showmsg",
   "socket", "password", "maxattempts", "status", "context", "port", 
   "shouldwarn", "num_warnings", "prompt", "client_lasterror",
-  "sendport", "recvport", "timer", ".rDevices"
+  "sendport", "recvport", "timer", ".rDevices", "need_auto_rhelp_on",
+  "need_auto_rpng_off"
 ))
