@@ -8,6 +8,9 @@
 #' One can also use \code{q()} (while the client is running), and
 #' this will not close the active R session on the client.
 #' 
+#' \code{exit()} will exit the remoter client/server.
+#'
+#' \code{shutdown()} will automatically shutdown the server before exit.
 #' 
 #' @param client.only
 #' Logical; if \code{TRUE}, then the client disconnects from
@@ -22,6 +25,13 @@
 #' @return
 #' Returns \code{TRUE} invisibly on successful exit.
 #' 
+#' @rdname exit
+#' @name exit
+NULL
+
+
+
+#' @rdname exit
 #' @export
 exit <- function(client.only=TRUE, q.server=TRUE)
 {
@@ -56,6 +66,7 @@ remoter_exit <- exit
 
 
 
+#' @rdname exit
 #' @export
 shutdown <- function()
 {
